[build-system]
requires = ["setuptools >= 42.0",
    "setuptools_scm[toml] >= 6.2",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HELENA"
authors = [
    {name = "Scott Doyle"}
]
description = "HELENA - TECPLOT visualisation and diagnostic tool "
keywords = ["tecplot", "data-visualisation", "data-analysis", "plasma-physics", "post-proessing"]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "scipy>=1.17.1",
    "toml>=0.10.2",
    "tqdm>=4.67.3",
]
dynamic = ["version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
helena = "helena.helena:run"

[project.optional-dependencies]
tests = [
    "pytest>=9.0.2",
    "snaptol>=0.0.4",
]
lint = [
    "ruff>=0.15.4",
]

[tool.setuptools_scm]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "ICN", # flake8-import-conventions
  "G",   # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
]
ignore = [
  "PLR2004", # magic-comparison
  "B9",      # flake8-bugbear opinionated warnings
]
